--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{layout}}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
   <script>
     window.layout = '{{layout}}'
+    window.error = '{{error}}'
   </script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
