--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,20 @@
 @font-face {
-  font-family: WildWood;
-  src: url('./fonts/Wildwood.ttf');
+  font-family: BigJohn;
+  src: url('./fonts/big_john.otf');
 }
 
-:global html, :global body, :global #app, :global [data-reactroot] {
-  height: 100%;
-}
-
-body {
-  font-family: WildWood;
-}
-
-.col {
+:global .col {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
 }
 
-.row {
+:global .row {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
 }
-
+/* 
 .el-2 {
   flex: 0 0 50%;
 }
@@ -45,7 +38,90 @@ body {
 .el-8 {
   flex: 0 0 12.5%;
 }
-
-.relative {
+ */
+:global .relative {
   position: relative;
+}
+
+:global .absolute {
+  position: absolute;
+}
+
+:global .center {
+  position: absolute;
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+
+:global .vertical-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+:global .horizontal-center {
+  margin: 0 auto;
+}
+
+:global html, :global body, :global #app, :global [data-reactroot] {
+  height: 100%;
+}
+
+h1 {
+  font-family: BigJohn;
+  margin-top: 0;
+}
+
+h3 {
+  text-align: center;
+  font-weight: normal;
+  font-style: italic;
+}
+
+body {
+  font-family: Lato;
+}
+
+button, input, label {
+  border-radius: 20px;
+  font-family: Lato;
+  /* border: 2px solid black; */
+  /* background-color: #e74c3c; */
+  /* border: 0; */
+  /* border-radius: 0; */
+  /* text-align: center; */
+  border: 1px solid rgb(200, 200, 200);
+  background-color: rgba(255, 255, 255, .4);
+  /* box-shadow: 0 0 2px 2px rgba(0, 0, 0, .1); */
+  transition: transform .3s, background-color .5s;
+  animation-name: dissapear;
+  animation-duration: .4s;
+  animation-play-state: paused;
+  animation-fill-mode: forwards;
+}
+
+@keyframes dissapear {
+  to {
+    opacity: 0;
+  }
+}
+
+button:hover, label:hover, input:hover {
+  background-color: rgb(240, 240, 240);
+}
+
+button:focus, label:focus, input:focus {
+  outline: 0;
+}
+
+button:active, button:focus, input:active, input:focus, input:checked + label {
+  box-shadow: inset 0 0 2px 3px rgba(0, 0, 0, .2);
+}
+
+img {
+  object-fit: contain;
+  height: 200px;
 }
