* HOLY SHIT THE MULTIPLAYER WORKS * ^ added support for multiplayer * added backend structure to accompany said support

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   <script>
     window.layout = '{{layout}}'
     window.id = '{{id}}'
+    window.opponent = '{{opponent}}'
   </script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
