--- a/src/component/stylesheet.css
+++ b/src/component/stylesheet.css
@@ -1,14 +1,3 @@
-.TopPanel {
-  width: 100%;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
-  /* padding: .8% 0;   */
-}
-
-.TopPanel * {
-  display: inline;
-  /* padding: 0 1%; */
-}
-
 .GameArea {
   z-index: -1;
   animation-name: unblur;
@@ -28,4 +17,12 @@
   border: 1px solid rgb(200, 200, 200);
   padding: 10px;
   border-radius: 10px;
+  background-color: rgba(255, 255, 255, .4);
+}
+
+.Footer {
+  transform: translateY(700px);
+  text-align: center;
+  border-top: 2px solid black;
+  padding: .2rem;
 }
