--- a/src/pages/game/stylesheet.css
+++ b/src/pages/game/stylesheet.css
@@ -8,14 +8,16 @@
   border: 0;
   border-radius: 0;
   line-height: 0;
+  z-index: 10;
+  /* transition: opacity .3s; */
 }
 
 .TetrisImg {
+  opacity: .3;
   width: 100px;
   padding: 0 2rem;
   /* box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, .3); */
-  opacity: .3;
-  transition: opacity .3s;
+
 }
 
 .TetrisImg:Hover {
